--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ img {
     margin-top: 10px;
     justify-content: space-between;
     padding: 10px;
+    margin-bottom: 10px;
 }
 
 .eth {
@@ -85,4 +86,8 @@ h4 {
 
 svg {
     margin-right: 10px;
+}
+
+.line {
+    border:1px solid hsl(215, 32%, 27%);
 }
