--- a/style.css
+++ b/style.css
@@ -6,10 +6,6 @@
     box-sizing: border-box;
 }
 
-#attribution {
-    display: none;
-}
-
 body {
     height: 100vh;
     display: flex;
@@ -138,4 +134,16 @@ span {
     font-weight: 300;
     word-spacing: 2px;
     color: white;
+}
+
+footer, a {
+    font-size: 12px;
+    color: white;
+    text-decoration: none;
+    transition: .4s ease;
+}
+
+a:hover{
+    text-decoration: underline;
+    color: hsl(215, 85%, 41%);
 }
