--- a/style.css
+++ b/style.css
@@ -1,146 +1,148 @@
-@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-@media screen and (min-width: 1440px) {
-    body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Outfit", sans-serif;
-    text-align: center;
-    color: white;
-    background-color: hsl(217, 54%, 11%);
-    position: relative;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Outfit", sans-serif;
+  text-align: center;
+  color: white;
+  background-color: hsl(217, 54%, 11%);
+  position: relative;
+}
 
 .container-one {
-    padding: 20px;
-    background-color: hsl(215, 46%, 11%);
-    border-radius: 20px;    
+  padding: 20px;
+  background-color: hsl(215, 46%, 11%);
+  border-radius: 20px;
 }
 
 .wrapper {
-    width: 350px;
-    background-color: hsl(216, 50%, 16%);
-    border-radius: 15px;
-    padding: 15px;
-    position: relative;
-    box-shadow: 0px 10px 50px hsl(215, 50%, 10%);
+  width: 350px;
+  background-color: hsl(216, 50%, 16%);
+  border-radius: 15px;
+  padding: 15px;
+  position: relative;
+  box-shadow: 0px 10px 50px hsl(215, 50%, 10%);
+  margin-left: 70px;
+  margin-top: 70px;
 }
 
 img {
-    border-radius: 20px;
-    margin-top: -10px;
-    margin-bottom: -50px;
-    padding: 5px;
+  border-radius: 20px;
+  margin-top: -10px;
+  margin-bottom: -50px;
+  padding: 5px;
 }
 
 .equili {
-    padding: 13px;
-    margin-top: 50px;
-    text-align: left;
+  padding: 13px;
+  margin-top: 50px;
+  text-align: left;
 }
 
 .equili h2 {
-    font-weight: 500;
-    font-size: 22px;
-    margin-bottom: 30px;
+  font-weight: 500;
+  font-size: 22px;
+  margin-bottom: 30px;
 }
 
 .equili p {
-    color: hsl(215, 51%, 70%);
-    font-weight: 300;
-    font-size: 18px;
+  color: hsl(215, 51%, 70%);
+  font-weight: 300;
+  font-size: 18px;
 }
 
 .eth-days {
-    display: flex;
-    font-size: 12px;
-    margin-top: 10px;
-    justify-content: space-between;
-    padding: 10px;
-    margin-bottom: 10px;
+  display: flex;
+  font-size: 12px;
+  margin-top: 10px;
+  justify-content: space-between;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
 .eth {
-    display: flex;
-    font-weight: 700;
+  display: flex;
+  font-weight: 700;
 }
 
 .days {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 h3 {
-    color: hsl(178, 100%, 50%);
+  color: hsl(178, 100%, 50%);
 }
 
 h4 {
-    font-weight: 400;
-    color: hsl(215, 51%, 70%);
-    font-size: 14.5px;
+  font-weight: 400;
+  color: hsl(215, 51%, 70%);
+  font-size: 14.5px;
 }
 
 svg {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .line {
-    border:1px solid hsl(215, 32%, 27%);
+  border: 1px solid hsl(215, 32%, 27%);
 }
 
-
 .creation {
-    display: flex;
-    width: 400px;
-    text-align: left;
-    position: relative;
-    margin-left: -13px;
-    margin-top: -5px;
-    align-items: center;
+  display: flex;
+  width: 400px;
+  text-align: left;
+  position: relative;
+  margin-left: -13px;
+  margin-top: -5px;
+  align-items: center;
 }
 
 .circle img {
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    border: 1px solid white;
-    align-content: center;
-    justify-content: center;
-    margin: 20px;
-    padding: 0;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  border: 1px solid white;
+  align-content: center;
+  justify-content: center;
+  margin: 20px;
+  padding: 0;
 }
 
 .creation h3 {
-    color: hsl(215, 51%, 70%);
-    font-weight: 400;
-    font-size: 15px;
-    word-spacing: 2px;
+  color: hsl(215, 51%, 70%);
+  font-weight: 400;
+  font-size: 15px;
+  word-spacing: 2px;
 }
 
 span {
-    font-weight: 400;
-    word-spacing: 2px;
-    color: white;
+  font-weight: 400;
+  word-spacing: 2px;
+  color: white;
 }
 
-footer, a {
-    font-size: 12px;
-    color: white;
-    text-decoration: none;
-    transition: .4s ease;
+footer {
+  margin-left: 50px;
+}
+footer,
+a {
+  font-size: 12px;
+  color: white;
+  text-decoration: none;
+  transition: 0.4s ease;
 }
 
-a:hover{
-    text-decoration: underline;
-    color: hsl(215, 85%, 41%);
-}
+a:hover {
+  text-decoration: underline;
+  color: hsl(215, 85%, 41%);
 }
