--- a/style.css
+++ b/style.css
@@ -6,143 +6,284 @@
   box-sizing: border-box;
 }
 
-body {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Outfit", sans-serif;
-  text-align: center;
-  color: white;
-  background-color: hsl(217, 54%, 11%);
-  position: relative;
+@media screen and (max-width: 375px) {
+  body {
+    width: 375px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Outfit", sans-serif;
+    text-align: center;
+    color: white;
+    background-color: hsl(217, 54%, 11%);
+    position: relative;
+  }
+
+  .container-one {
+    padding: 20px;
+    background-color: hsl(215, 46%, 11%);
+    border-radius: 20px;
+  }
+
+  .wrapper {
+    width: 350px;
+    background-color: hsl(216, 50%, 16%);
+    border-radius: 15px;
+    padding: 15px;
+    position: relative;
+    box-shadow: 0px 10px 50px hsl(215, 50%, 10%);
+    margin-left: 70px;
+    margin-top: 70px;
+  }
+
+  img {
+    border-radius: 20px;
+    margin-top: -10px;
+    margin-bottom: -50px;
+    padding: 5px;
+  }
+
+  .equili {
+    padding: 13px;
+    margin-top: 50px;
+    text-align: left;
+  }
+
+  .equili h2 {
+    font-weight: 500;
+    font-size: 22px;
+    margin-bottom: 30px;
+  }
+
+  .equili p {
+    color: hsl(215, 51%, 70%);
+    font-weight: 300;
+    font-size: 18px;
+  }
+
+  .eth-days {
+    display: flex;
+    font-size: 12px;
+    margin-top: 10px;
+    justify-content: space-between;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+
+  .eth {
+    display: flex;
+    font-weight: 700;
+  }
+
+  .days {
+    display: flex;
+    align-items: center;
+  }
+
+  h3 {
+    color: hsl(178, 100%, 50%);
+  }
+
+  h4 {
+    font-weight: 400;
+    color: hsl(215, 51%, 70%);
+    font-size: 14.5px;
+  }
+
+  svg {
+    margin-right: 10px;
+  }
+
+  .line {
+    border: 1px solid hsl(215, 32%, 27%);
+  }
+
+  .creation {
+    display: flex;
+    width: 400px;
+    text-align: left;
+    position: relative;
+    margin-left: -13px;
+    margin-top: -5px;
+    align-items: center;
+  }
+
+  .circle img {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    border: 1px solid white;
+    align-content: center;
+    justify-content: center;
+    margin: 20px;
+    padding: 0;
+  }
+
+  .creation h3 {
+    color: hsl(215, 51%, 70%);
+    font-weight: 400;
+    font-size: 15px;
+    word-spacing: 2px;
+  }
+
+  span {
+    font-weight: 400;
+    word-spacing: 2px;
+    color: white;
+  }
+
+  footer {
+    margin-left: 50px;
+  }
+  footer,
+  a {
+    font-size: 12px;
+    color: white;
+    text-decoration: none;
+    transition: 0.4s ease;
+  }
+
+  a:hover {
+    text-decoration: underline;
+    color: hsl(215, 85%, 41%);
+  }
 }
 
-.container-one {
-  padding: 20px;
-  background-color: hsl(215, 46%, 11%);
-  border-radius: 20px;
-}
+@media screen and (min-width: 1440px) {
+  body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Outfit", sans-serif;
+    text-align: center;
+    color: white;
+    background-color: hsl(217, 54%, 11%);
+    position: relative;
+  }
 
-.wrapper {
-  width: 350px;
-  background-color: hsl(216, 50%, 16%);
-  border-radius: 15px;
-  padding: 15px;
-  position: relative;
-  box-shadow: 0px 10px 50px hsl(215, 50%, 10%);
-  margin-left: 70px;
-  margin-top: 70px;
-}
+  .container-one {
+    padding: 20px;
+    background-color: hsl(215, 46%, 11%);
+    border-radius: 20px;
+  }
 
-img {
-  border-radius: 20px;
-  margin-top: -10px;
-  margin-bottom: -50px;
-  padding: 5px;
-}
+  .wrapper {
+    width: 350px;
+    background-color: hsl(216, 50%, 16%);
+    border-radius: 15px;
+    padding: 15px;
+    position: relative;
+    box-shadow: 0px 10px 50px hsl(215, 50%, 10%);
+  }
 
-.equili {
-  padding: 13px;
-  margin-top: 50px;
-  text-align: left;
-}
+  img {
+    border-radius: 20px;
+    margin-top: -10px;
+    margin-bottom: -50px;
+    padding: 5px;
+  }
 
-.equili h2 {
-  font-weight: 500;
-  font-size: 22px;
-  margin-bottom: 30px;
-}
+  .equili {
+    padding: 13px;
+    margin-top: 50px;
+    text-align: left;
+  }
 
-.equili p {
-  color: hsl(215, 51%, 70%);
-  font-weight: 300;
-  font-size: 18px;
-}
+  .equili h2 {
+    font-weight: 500;
+    font-size: 22px;
+    margin-bottom: 30px;
+  }
 
-.eth-days {
-  display: flex;
-  font-size: 12px;
-  margin-top: 10px;
-  justify-content: space-between;
-  padding: 10px;
-  margin-bottom: 10px;
-}
+  .equili p {
+    color: hsl(215, 51%, 70%);
+    font-weight: 300;
+    font-size: 18px;
+  }
 
-.eth {
-  display: flex;
-  font-weight: 700;
-}
+  .eth-days {
+    display: flex;
+    font-size: 12px;
+    margin-top: 10px;
+    justify-content: space-between;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
 
-.days {
-  display: flex;
-  align-items: center;
-}
+  .eth {
+    display: flex;
+    font-weight: 700;
+  }
 
-h3 {
-  color: hsl(178, 100%, 50%);
-}
+  .days {
+    display: flex;
+    align-items: center;
+  }
 
-h4 {
-  font-weight: 400;
-  color: hsl(215, 51%, 70%);
-  font-size: 14.5px;
-}
+  h3 {
+    color: hsl(178, 100%, 50%);
+  }
 
-svg {
-  margin-right: 10px;
-}
+  h4 {
+    font-weight: 400;
+    color: hsl(215, 51%, 70%);
+    font-size: 14.5px;
+  }
 
-.line {
-  border: 1px solid hsl(215, 32%, 27%);
-}
+  svg {
+    margin-right: 10px;
+  }
 
-.creation {
-  display: flex;
-  width: 400px;
-  text-align: left;
-  position: relative;
-  margin-left: -13px;
-  margin-top: -5px;
-  align-items: center;
-}
+  .line {
+    border: 1px solid hsl(215, 32%, 27%);
+  }
 
-.circle img {
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-  border: 1px solid white;
-  align-content: center;
-  justify-content: center;
-  margin: 20px;
-  padding: 0;
-}
+  .creation {
+    display: flex;
+    width: 400px;
+    text-align: left;
+    position: relative;
+    margin-left: -13px;
+    margin-top: -5px;
+    align-items: center;
+  }
 
-.creation h3 {
-  color: hsl(215, 51%, 70%);
-  font-weight: 400;
-  font-size: 15px;
-  word-spacing: 2px;
-}
+  .circle img {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    border: 1px solid white;
+    align-content: center;
+    justify-content: center;
+    margin: 20px;
+    padding: 0;
+  }
 
-span {
-  font-weight: 400;
-  word-spacing: 2px;
-  color: white;
-}
+  .creation h3 {
+    color: hsl(215, 51%, 70%);
+    font-weight: 400;
+    font-size: 15px;
+    word-spacing: 2px;
+  }
 
-footer {
-  margin-left: 50px;
-}
-footer,
-a {
-  font-size: 12px;
-  color: white;
-  text-decoration: none;
-  transition: 0.4s ease;
-}
+  span {
+    font-weight: 400;
+    word-spacing: 2px;
+    color: white;
+  }
 
-a:hover {
-  text-decoration: underline;
-  color: hsl(215, 85%, 41%);
+  footer,
+  a {
+    font-size: 12px;
+    color: white;
+    text-decoration: none;
+    transition: 0.4s ease;
+  }
+
+  a:hover {
+    text-decoration: underline;
+    color: hsl(215, 85%, 41%);
+  }
 }
